--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
           search-paths:
             - springCloud-config
       ##读取分支
-      label: main
+      label: master
   #rabbit相关配置 15672是web管理界面的端口，5672是MQ访问的端口
   rabbitmq:
     host: localhost
